Fixing icons on Firefox

--- a/components/common/asset/asset-application.module.css
+++ b/components/common/asset/asset-application.module.css
@@ -2,7 +2,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 2rem;
+    /* margin: 2rem; */
+    width: 60%;
 }
 .icon{
     width: 90%;
