--- a/components/common/asset/asset-thumbail.module.css
+++ b/components/common/asset/asset-thumbail.module.css
@@ -13,6 +13,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 1rem;
 }
 
 .image-button-wrapper, .uploading {
