--- a/components/main/search-overlay-assets/search-item.module.css
+++ b/components/main/search-overlay-assets/search-item.module.css
@@ -2,6 +2,9 @@
   width: 50px;
   height: 50px;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .image-wrapper.image-selectable{
